[gd_scene load_steps=5 format=3 uid="uid://b8w5wbmaey2hq"]

[ext_resource type="Theme" uid="uid://dlmvgp744mykf" path="res://addons/inventory_slot_plugin/assets/themes/default.tres" id="1_1w27d"]
[ext_resource type="Script" path="res://addons/inventory_slot_plugin/script/dock/ivt_slot.gd" id="1_tkquw"]
[ext_resource type="Texture2D" uid="uid://becu4ghipl448" path="res://addons/inventory_slot_plugin/assets/icons/slot_reload.tres" id="3_o3b3d"]
[ext_resource type="Texture2D" uid="uid://boxdvtor8gb8m" path="res://addons/inventory_slot_plugin/assets/icons/slot_theme_default.tres" id="4_n2hf1"]

[node name="IVTSlot" type="PanelContainer"]
anchors_preset = -1
anchor_right = 0.333333
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_1w27d")
script = ExtResource("1_tkquw")
metadata/_edit_use_anchors_ = true

[node name="Scroll" type="ScrollContainer" parent="."]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Panels" type="VBoxContainer" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="Scroll/Panels"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Scroll/Panels/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory Slot Plugin"
horizontal_alignment = 1

[node name="ReloadPlugin" type="Button" parent="Scroll/Panels/TopBar"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("3_o3b3d")

[node name="RemoveTheme" type="Button" parent="Scroll/Panels/TopBar"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("4_n2hf1")
icon_alignment = 1

[connection signal="pressed" from="Scroll/Panels/TopBar/ReloadPlugin" to="." method="_on_reload_plugin_pressed"]
[connection signal="pressed" from="Scroll/Panels/TopBar/RemoveTheme" to="." method="_on_remove_theme_pressed"]
